--- a/manifest.json
+++ b/manifest.json
@@ -1,43 +1,31 @@
 {
-	"name": "GC Tools",
-	"icons": [
-		{
-			"src": "/android-chrome-36x36.png",
-			"sizes": "36x36",
-			"type": "image/png",
-			"density": 0.75
-		},
-		{
-			"src": "/android-chrome-48x48.png",
-			"sizes": "48x48",
-			"type": "image/png",
-			"density": 1
-		},
-		{
-			"src": "/android-chrome-72x72.png",
-			"sizes": "72x72",
-			"type": "image/png",
-			"density": 1.5
-		},
-		{
-			"src": "/android-chrome-96x96.png",
-			"sizes": "96x96",
-			"type": "image/png",
-			"density": 2.0
-		},
-		{
-			"src": "/android-chrome-144x144.png",
-			"sizes": "144x144",
-			"type": "image/png",
-			"density": 3.0
-		},
-		{
-			"src": "/android-chrome-192x192.png",
-			"sizes": "192x192",
-			"type": "image/png",
-			"density": 4.0
-		}
-	],
-	"start_url": "/gc/index.html",
-	"display": "standalone"
+    "v": 5,
+    "name": "GC Tools",
+    "short_name": "gcTools",
+    "icons": [
+        {
+            "src": "image/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "image/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "image/icon-256x256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "image/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "start_url": "index.html",
+    "display": "standalone",
+    "background_color": "#1A1A1A",
+    "theme_color": "#0A0A0A"
 }
